syntax = "proto3";
package orderpb;

option go_package = "github.com/Hypocrite/gorder/common/genproto/orderpb";

import "google/protobuf/empty.proto";

service OrderService {
  rpc CreateOrder(CreateOrderReq) returns (google.protobuf.Empty);
  rpc GetOrder(GetOrderReq) returns (Order);
  rpc UpdateOrder(Order) returns (google.protobuf.Empty);
}

message CreateOrderReq {
  string CustomerID = 1;
  repeated ItemWithQuantity Items = 2;
}

message GetOrderReq {
  string OrderID = 1;
  string CustomerID = 2;
}

message  ItemWithQuantity {
  string ID = 1;
  int32 Quantity = 2;
}

message Item {
  string ID = 1;
  string Name = 2;
  int32  Quantity = 3;
  string PriceID = 4;
}

message Order {
  string ID = 1;
  string CustomerID = 2;
  string Status = 3;
  repeated Item Items = 4;
}